--- a/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
+++ b/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12A269" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
@@ -71,8 +71,15 @@
                                 </view>
                             </tableViewCell>
                         </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KVz-eT-a9m" id="Pr3-Pz-Mej"/>
+                            <outlet property="delegate" destination="KVz-eT-a9m" id="rmC-KH-whD"/>
+                        </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="BlueChat" id="q07-L0-b7g"/>
+                    <connections>
+                        <outlet property="tbl" destination="7Dd-xW-ggZ" id="oMz-8h-SOI"/>
+                    </connections>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="1164" y="531"/>
@@ -158,6 +165,9 @@
         </class>
         <class className="ListViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ListViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tbl" candidateClass="UITableView"/>
+            </relationships>
         </class>
         <class className="MainViewController" superclassName="UITabBarController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MainViewController.h"/>
