--- a/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
+++ b/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
@@ -174,39 +174,6 @@
             </objects>
             <point key="canvasLocation" x="1616" y="531"/>
         </scene>
-        <!--List View Controller - BlueChat-->
-        <scene sceneID="t9Q-Sx-hHd">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mtb-p0-fDA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="KVz-eT-a9m" customClass="ListViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="7Dd-xW-ggZ">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="o85-dx-ipv">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="KVz-eT-a9m" id="Pr3-Pz-Mej"/>
-                            <outlet property="delegate" destination="KVz-eT-a9m" id="rmC-KH-whD"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="BlueChat" id="q07-L0-b7g"/>
-                    <connections>
-                        <outlet property="tbl" destination="7Dd-xW-ggZ" id="oMz-8h-SOI"/>
-                    </connections>
-                </tableViewController>
-            </objects>
-            <point key="canvasLocation" x="1164" y="531"/>
-        </scene>
         <!--Setting View Controller - Setting-->
         <scene sceneID="Qod-am-Ff1">
             <objects>
@@ -232,6 +199,41 @@
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="1164" y="1149"/>
+        </scene>
+        <!--List View Controller - ChatView-->
+        <scene sceneID="ddi-38-lyB">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O7p-0Q-il8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="EPm-oH-xjV" customClass="ListViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uAD-eE-jjT">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fLt-fc-djP">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="337"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="EPm-oH-xjV" id="GTS-sT-Iy2"/>
+                                    <outlet property="delegate" destination="EPm-oH-xjV" id="MBM-dG-i1H"/>
+                                </connections>
+                            </tableView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="qNh-mP-hTi">
+                                <rect key="frame" x="0.0" y="336" width="320" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="ChatView" id="IAe-dT-DfU"/>
+                    <connections>
+                        <outlet property="tbl" destination="fLt-fc-djP" id="fiV-Vn-Icj"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1118" y="531"/>
         </scene>
         <!--Navigation Controller - Setting-->
         <scene sceneID="Yxf-Xe-0MO">
@@ -259,7 +261,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="KVz-eT-a9m" kind="relationship" relationship="rootViewController" id="kxw-bR-5Do"/>
+                        <segue destination="EPm-oH-xjV" kind="relationship" relationship="rootViewController" id="qKF-h6-5YT"/>
                     </connections>
                 </navigationController>
             </objects>
@@ -283,7 +285,7 @@
         </scene>
     </scenes>
     <classes>
-        <class className="ListViewController" superclassName="UITableViewController">
+        <class className="ListViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ListViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="tbl" candidateClass="UITableView"/>
