--- a/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
+++ b/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12A269" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
@@ -157,7 +157,7 @@
                     </navigationItem>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="2122" y="482"/>
+            <point key="canvasLocation" x="2442" y="460"/>
         </scene>
         <!--Navigation Controller - Connect-->
         <scene sceneID="OuJ-Vn-Jyl">
@@ -172,7 +172,7 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="1616" y="531"/>
+            <point key="canvasLocation" x="2040" y="460"/>
         </scene>
         <!--Setting View Controller - Setting-->
         <scene sceneID="Qod-am-Ff1">
@@ -200,11 +200,11 @@
             </objects>
             <point key="canvasLocation" x="1164" y="1149"/>
         </scene>
-        <!--List View Controller - ChatView-->
+        <!--Chat View Controller - ChatView-->
         <scene sceneID="ddi-38-lyB">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O7p-0Q-il8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="EPm-oH-xjV" customClass="ListViewController" sceneMemberID="viewController">
+                <viewController id="EPm-oH-xjV" customClass="ChatViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uAD-eE-jjT">
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -244,14 +244,47 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1118" y="531"/>
+            <point key="canvasLocation" x="1516" y="536"/>
         </scene>
-        <!--Navigation Controller - Setting-->
+        <!--List View Controller - Chat-->
+        <scene sceneID="JqL-VR-3YG">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1qQ-oD-4QM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="FLB-vv-ZQd" customClass="ListViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gbH-ZW-dfY">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="Oie-4T-XDI">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <connections>
+                                    <segue destination="EPm-oH-xjV" kind="push" id="tqg-DQ-nfd"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="FLB-vv-ZQd" id="qbj-mX-aBd"/>
+                            <outlet property="delegate" destination="FLB-vv-ZQd" id="QRb-mE-706"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Chat" id="lX0-sz-Y4p"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="1073" y="536"/>
+        </scene>
+        <!--Blue Chat Navigation Controller - Setting-->
         <scene sceneID="Yxf-Xe-0MO">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0VP-gG-Yn9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController definesPresentationContext="YES" id="ExY-Z1-AH3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Setting" id="gFw-0k-TgU"/>
+                <navigationController definesPresentationContext="YES" id="ExY-Z1-AH3" customClass="BlueChatNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Setting" image="tabbar_04.png" id="gFw-0k-TgU"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Oc3-3u-1TH">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -262,28 +295,28 @@
             </objects>
             <point key="canvasLocation" x="630" y="1149"/>
         </scene>
-        <!--Navigation Controller - Chat-->
+        <!--Blue Chat Navigation Controller - Chat-->
         <scene sceneID="5i6-Tc-8x4">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9nt-pv-fKE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController definesPresentationContext="YES" id="f9F-rG-tHW" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Chat" id="qkd-Jx-jJk"/>
+                <navigationController definesPresentationContext="YES" id="f9F-rG-tHW" customClass="BlueChatNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" image="tabbar_02.png" id="qkd-Jx-jJk"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="a67-yu-wMk">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="EPm-oH-xjV" kind="relationship" relationship="rootViewController" id="qKF-h6-5YT"/>
+                        <segue destination="FLB-vv-ZQd" kind="relationship" relationship="rootViewController" id="kK3-rI-bQn"/>
                     </connections>
                 </navigationController>
             </objects>
             <point key="canvasLocation" x="687" y="531"/>
         </scene>
-        <!--Navigation Controller - Connect-->
+        <!--Blue Chat Navigation Controller - Connect-->
         <scene sceneID="wt2-bX-M23">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ue9-7S-59M" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController definesPresentationContext="YES" id="sSn-nP-7Mt" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Connect" id="1iO-fI-EED"/>
+                <navigationController definesPresentationContext="YES" id="sSn-nP-7Mt" customClass="BlueChatNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Connect" image="tabbar_01.png" id="1iO-fI-EED"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ezd-DN-LPq">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -295,14 +328,25 @@
             <point key="canvasLocation" x="630" y="-112"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tabbar_01.png" width="28" height="24"/>
+        <image name="tabbar_02.png" width="24" height="22"/>
+        <image name="tabbar_04.png" width="28" height="8"/>
+    </resources>
     <classes>
-        <class className="ListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ListViewController.h"/>
+        <class className="BlueChatNavigationController" superclassName="UINavigationController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlueChatNavigationController.h"/>
+        </class>
+        <class className="ChatViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ChatViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="field" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="tbl" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
             </relationships>
+        </class>
+        <class className="ListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ListViewController.h"/>
         </class>
         <class className="MainViewController" superclassName="UITabBarController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MainViewController.h"/>
