--- a/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
+++ b/BlueChat/BlueChat/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12A269" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
@@ -110,7 +110,11 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" title="Client List" id="n6r-fa-EEf">
-                        <barButtonItem key="leftBarButtonItem" title="Close" id="aXq-mD-oLe"/>
+                        <barButtonItem key="leftBarButtonItem" title="Close" id="aXq-mD-oLe">
+                            <connections>
+                                <action selector="close:" destination="lFP-b1-yU5" id="OLe-CI-NNT"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
             </objects>
@@ -329,9 +333,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tabbar_01.png" width="28" height="24"/>
-        <image name="tabbar_02.png" width="24" height="22"/>
-        <image name="tabbar_04.png" width="28" height="8"/>
+        <image name="tabbar_01.png" width="16" height="16"/>
+        <image name="tabbar_02.png" width="16" height="16"/>
+        <image name="tabbar_04.png" width="16" height="16"/>
     </resources>
     <classes>
         <class className="BlueChatNavigationController" superclassName="UINavigationController">
@@ -343,6 +347,12 @@
                 <relationship kind="outlet" name="field" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="tbl" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="ClientTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ClientTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="close:"/>
             </relationships>
         </class>
         <class className="ListViewController" superclassName="UITableViewController">
